Fix the focus/hoover state jump

--- a/src/elements/button.css
+++ b/src/elements/button.css
@@ -39,7 +39,7 @@ button.button {
   &:not([disabled]):hover {
     background-color: var(--primary);
     border: 1px solid var(--primary);
-    box-shadow: 0 0 .3rem var(--primary);
+    box-shadow: 0 0 .1rem var(--primary);
     color: var(--primary-bg);
     cursor: pointer;
     outline: 0;
