--- a/src/forms/input.css
+++ b/src/forms/input.css
@@ -100,8 +100,8 @@ input[type="color"] {
 
   &:hover,
   &:focus {
-    border: 2px solid var(--primary);
-    box-shadow: 0 0 .3rem var(--primary);
+    border: 1px solid var(--primary);
+    box-shadow: 0 0 .6rem var(--primary);
     outline: 0;
   }
 }
